tests/baselines/reference/topLevelAwaitErrors.8(module=esnext).errors.txt
index.ts(2,8): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== index.ts (1 errors) ====
    // await disallowed in default import
    import await from "./other";
           ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    
==== other.ts (0 errors) ====
    declare const _await: any;
    export default _await;
    